--- a/shop.html
+++ b/shop.html
@@ -105,7 +105,7 @@
     <section class="breadcrumb">
         <ul class="breadcrumb__list flex container">
             <li><a href="index.html" class="breadcrumb__link">Home</a></li>
-            <li><span class="breadcrumb__link">></span></li>
+            <li><span class="breadcrumb__link">/</span></li>
             <li><span class="breadcrumb__link">Shop</span></li>
         </ul>
     </section>
@@ -818,8 +818,6 @@
             </a></li>
         </ul>
     </section>
-
-    
 
     <!--============= NEWSLETTER ===========-->
     <section class="newsletter section home__newsletter">
