--- a/checkout.html
+++ b/checkout.html
@@ -112,181 +112,132 @@
                 <li><span class="breadcrumb__link">/</span></li>
                 <a href="shop.html" class="breadcrumb__link">Shop</a>
                 <li><span class="breadcrumb__link">/</span></li>
-                <li><span class="breadcrumb__link">Cart</span></li>
+                <li><span class="breadcrumb__link">Checkout</span></li>
             </ul>
         </section>
 
-        <!--============= CART ===============-->
-        <section class="cart section--lg container">
-            <div class="table__container">
-                <table class="table">
-                    <tr>
-                        <th>Image</th>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>quantity</th>
-                        <th>Subtotal</th>
-                        <th>Remove</th>
-                    </tr>
+        <!--============= CHECKOUT ===============-->
+        <section class="checkout section--lg">
+            <div class="checkout__container container grid">
+                <div class="checkout__group">
+                    <h3 class="section__title">Billing Details</h3>
 
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/images (6).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
+                    <form action="" class="form grid">
+                        <input type="text" placeholder="Name" class="form__input">
 
-                        <td>
-                            <h3 class="table__title">
-                                J.Crew Mercantile Women's Short-Sleeve
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
+                        <input type="text" placeholder="Address" class="form__input">
 
-                        <td><span class="table__price">$110</span></td>
+                        <input type="text" placeholder="City" class="form__input">
 
-                        <td><input type="number" value="3" class="quantity"></td>
+                        <input type="text" placeholder="Country" class="form__input">
 
-                        <td><span class="table__subtotal">$220</span></td>
+                        <input type="text" placeholder="Postcode" class="form__input">
 
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
+                        <input type="text" placeholder="Phone" class="form__input">
 
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/images (5).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
+                        <input type="email" placeholder="Email" class="form__input">
 
-                        <td>
-                            <h3 class="table__title">
-                                J.Crew Mercantile Women's Short-Sleeve
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
+                        <h3 class="checkout__title">Additional Information</h3>
 
-                        <td><span class="table__price">$110</span></td>
-
-                        <td><input type="number" value="3" class="quantity"></td>
-
-                        <td><span class="table__subtotal">$220</span></td>
-
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
-
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/téléchargement (2).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
-
-                        <td>
-                            <h3 class="table__title">
-                                Amazon Brand Ritual Women's Jersey
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
-
-                        <td><span class="table__price">$110</span></td>
-
-                        <td><input type="number" value="3" class="quantity"></td>
-
-                        <td><span class="table__subtotal">$220</span></td>
-
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="cart__actions">
-                <a href="" class="btn flex btn--md">
-                    <i class="fi-rs-shuffle"></i> Update Cart
-                </a>
-
-                <a href="" class="btn flex btn--md">
-                    <i class="fi-rs-shopping-bag"></i> Continue Shopping
-                </a>
-            </div>
-
-            <div class="divider">
-                <i class="fi fi-rs-fingerprint"></i>
-            </div>
-
-            <div class="cart__group grid">
-                <div>
-                    <div class="cart__shipping">
-                        <h3 class="section__title">Calculate Shipping</h3>
-
-                        <form action="" class="form grid">
-                            <input type="text" placeholder="State / Country" 
-                            class="form__input">
-
-                            <div class="form__group grid">
-                                <input type="text" placeholder="City" 
-                                class="form__input">
-
-                                <input type="text" placeholder="postale / ZIP" 
-                                class="form__input">
-                            </div>
-
-                            <div class="form__btn">
-                                <button class="btn flex btn--sm">
-                                    <i class="fi-rs-shuffle"></i> Update
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="cart__coupon">
-                        <h3 class="section__title">Apply Coupon</h3>
-
-                        <form action="" class="coupon__form form grid">
-                            <div class="form__group grid">
-                                <input type="text" 
-                                class="form__input" 
-                                placeholder="Enter Your Coupon">
-
-                                <div class="form__btn">
-                                    <button class="btn flex btn--sm">
-                                        <i class="fi-rs-label"></i> Apply
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                        <textarea name="" placeholder="Order note" id="" cols="30" 
+                        rows="10" class="form__input textarea"></textarea>
+                    </form>
                 </div>
 
-                <div class="cart__total">
+                <div class="checkout__group">
                     <h3 class="section__title">Cart Totals</h3>
 
-                    <table class="cart__total-table">
+                    <table class="order__table">
                         <tr>
-                            <td><span class="cart__total-title">Cart Subtotal</span></td>
-                            <td><span class="cart__total-price">$240.00</span></td>
+                            <th colspan="2">Products</th>
+                            <th>Total</th>
                         </tr>
 
                         <tr>
-                            <td><span class="cart__total-title">Shipping</span></td>
-                            <td><span class="cart__total-price"></span>$10.00</span></td>
+                            <td>
+                                <img src="Assets/Img/images/images (3).jpeg" 
+                                alt="" 
+                                class="order__img">
+                            </td>
+
+                            <td>
+                                <h3 class="table__title">Yidarton Women Summer Blue</h3>
+                                <p class="table__quantity">x 2</p>
+                            </td>
+
+                            <td><span class="table__price">$180.00</span></td>
                         </tr>
 
                         <tr>
-                            <td><span class="cart__total-title">Total</span></td>
-                            <td><span class="cart__total-price">$250.00</span></td>
+                            <td>
+                                <img src="Assets/Img/images/images (4).jpeg" 
+                                alt="" 
+                                class="order__img">
+                            </td>
+
+                            <td>
+                                <h3 class="table__title">LDB MOON Women summer</h3>
+                                <p class="table__quantity">x 1</p>
+                            </td>
+
+                            <td><span class="table__price">$65.00</span></td>
                         </tr>
+
+                        <tr>
+                            <td>
+                                <img src="Assets/Img/images/images (5).jpeg" 
+                                alt="" 
+                                class="order__img">
+                            </td>
+
+                            <td>
+                                <h3 class="table__title">Women's Short Sleeve Loose</h3>
+                                <p class="table__quantity">x 2</p>
+                            </td>
+
+                            <td><span class="table__price">$35.00</span></td>
+                        </tr>
+
+                        <tr>
+                            <td><span class="order__subtitle">SubTotal</span></td>
+                            <td colspan="2"><span class="table__price">$280.00</span></td>
+                        </tr>
+
+                        <tr>
+                            <td><span class="order__subtitle">Shipping</span></td>
+                            <td colspan="2"><span class="table__price">Free Shipping</span></td>
+                        </tr>
+
+                        <tr>
+                            <td><span class="order__subtitle">Total</span></td>
+                            <td colspan="2"><span class="order__grand-total">$280.00</span></td>
+                        </tr>
+                        
                     </table>
 
-                    <a href="checkout.html" class="btn flex btn--md">
-                        <i class="fi fi-rs-box-alt"></i> Proceed To Checkout
-                    </a>
+                    <div class="payment__methods">
+                        <h3 class="checkout__title payment__title">Payment</h3>
+
+                        <div class="payment__option flex">
+                            <input type="radio" name="radio" id="DBkTransfer" checked class="payment__input">
+                            <label for="DBkTransfer" 
+                            class="payment__label">Direct Bank Transfer</label>
+                        </div>
+
+                        <div class="payment__option flex">
+                            <input type="radio" name="radio" id="ChkPayment" class="payment__input">
+                            <label for="ChkPayment" 
+                            class="payment__label">Check Payment</label>
+                        </div>
+
+                        <div class="payment__option flex">
+                            <input type="radio" name="radio" id="paypal" class="payment__input">
+                            <label for="paypal" 
+                            class="payment__label">Paypal</label>
+                        </div>
+
+                        <button class="btn btn--md">Place Order</button>
+                    </div>
                 </div>
             </div>
         </section>
