--- a/compare.html
+++ b/compare.html
@@ -112,183 +112,185 @@
                 <li><span class="breadcrumb__link">/</span></li>
                 <a href="shop.html" class="breadcrumb__link">Shop</a>
                 <li><span class="breadcrumb__link">/</span></li>
-                <li><span class="breadcrumb__link">Cart</span></li>
+                <li><span class="breadcrumb__link">Compare</span></li>
             </ul>
         </section>
 
-        <!--============= CART ===============-->
-        <section class="cart section--lg container">
-            <div class="table__container">
-                <table class="table">
-                    <tr>
-                        <th>Image</th>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>quantity</th>
-                        <th>Subtotal</th>
-                        <th>Remove</th>
-                    </tr>
+        <!--============= COMPARE ===============-->
+        <section class="compare container section--lg">
+            <table class="compare__table">
+                <tr>
+                    <th>Image</th>
+                    <td>
+                        <img src="Assets/Img/images/images (2).jpeg" 
+                        alt="" 
+                        class="compare__img">
+                    </td>
 
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/images (6).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
+                    <td>
+                        <img src="Assets/Img/images/images (4).jpeg" 
+                        alt="" 
+                        class="compare__img">
+                    </td>
 
-                        <td>
-                            <h3 class="table__title">
-                                J.Crew Mercantile Women's Short-Sleeve
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
+                    <td>
+                        <img src="Assets/Img/images/images (6).jpeg" 
+                        alt="" 
+                        class="compare__img">
+                    </td>
+                </tr>
 
-                        <td><span class="table__price">$110</span></td>
+                <tr>
+                    <th>Name</th>
+                    <td><h3 class="table__title">Plain Striola Shirts</h3></td>
+                    <td><h3 class="table__title">Chen Cardigan</h3></td>
+                    <td><h3 class="table__title">Henley Shirt</h3></td>
+                </tr>
 
-                        <td><input type="number" value="3" class="quantity"></td>
+                <tr>
+                    <th>Price</th>
+                    <td><span class="table__price">$35</span></td>
+                    <td><span class="table__price">$67</span></td>
+                    <td><span class="table__price">$24</span></td>
+                </tr>
 
-                        <td><span class="table__subtotal">$220</span></td>
+                <tr>
+                    <th>Description</th>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Harum consequatur reiciendis libero ad vel in recusandae laborum deserunt dolore facere.
+                        </p>
+                    </td>
 
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Harum consequatur reiciendis libero ad vel in recusandae laborum deserunt dolore facere.
+                        </p>
+                    </td>
 
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/images (5).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Harum consequatur reiciendis libero ad vel in recusandae laborum deserunt dolore facere.
+                        </p>
+                    </td>
+                </tr>
 
-                        <td>
-                            <h3 class="table__title">
-                                J.Crew Mercantile Women's Short-Sleeve
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
+                <tr>
+                    <th>Colors</th>
+                    <td>
+                        <ul class="color__list compare__colors">
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(37, 100%, 65%);"
+                                ></a>
+                            </li>
 
-                        <td><span class="table__price">$110</span></td>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(353, 100%, 67%);"
+                                ></a>
+                            </li>
 
-                        <td><input type="number" value="3" class="quantity"></td>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(304, 100%, 78%);"
+                                ></a>
+                            </li>
+                        </ul>
+                    </td>
 
-                        <td><span class="table__subtotal">$220</span></td>
+                    <td>
+                        <ul class="color__list compare__colors">
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(37, 100%, 65%);"
+                                ></a>
+                            </li>
 
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(353, 100%, 67%);"
+                                ></a>
+                            </li>
 
-                    <tr>
-                        <td>
-                            <img src="Assets/Img/images/téléchargement (2).jpeg" 
-                            alt="" 
-                            class="table__img">
-                        </td>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(304, 100%, 78%);"
+                                ></a>
+                            </li>
+                        </ul>
+                    </td>
 
-                        <td>
-                            <h3 class="table__title">
-                                Amazon Brand Ritual Women's Jersey
-                            </h3>
-                            <p class="table__description">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, itaque.
-                            </p>
-                        </td>
+                    <td>
+                        <ul class="color__list compare__colors">
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(37, 100%, 65%);"
+                                ></a>
+                            </li>
 
-                        <td><span class="table__price">$110</span></td>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(353, 100%, 67%);"
+                                ></a>
+                            </li>
 
-                        <td><input type="number" value="3" class="quantity"></td>
+                            <li>
+                                <a href="#" 
+                                    class="color__link" 
+                                    style="background-color: hsl(304, 100%, 78%);"
+                                ></a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
-                        <td><span class="table__subtotal">$220</span></td>
+                <tr>
+                    <th>Stock</th>
+                    <td><span class="table__stock">Out of stock</span></td>
+                    <td><span class="table__stock">Out of stock</span></td>
+                    <td><span class="table__stock">Out of stock</span></td>
+                </tr>
 
-                        <td><i class="fi fi-rs-trash table__trash"></i></td>
-                    </tr>
-                </table>
-            </div>
+                <tr>
+                    <th>Weight</th>
+                    <td><span class="table__weight">150 gram</span></td>
+                    <td><span class="table__weight">150 gram</span></td>
+                    <td><span class="table__weight">150 gram</span></td>
+                </tr>
 
-            <div class="cart__actions">
-                <a href="" class="btn flex btn--md">
-                    <i class="fi-rs-shuffle"></i> Update Cart
-                </a>
+                <tr>
+                    <th>Dimensions</th>
+                    <td><span class="table__dimension">N/A</span></td>
+                    <td><span class="table__dimension">N/A</span></td>
+                    <td><span class="table__dimension">N/A</span></td>
+                </tr>
 
-                <a href="" class="btn flex btn--md">
-                    <i class="fi-rs-shopping-bag"></i> Continue Shopping
-                </a>
-            </div>
+                <tr>
+                    <th>Buy</th>
+                    <td><a href="" class="btn btn--sm">Add to Cart</a></td>
+                    <td><a href="" class="btn btn--sm">Add to Cart</a></td>
+                    <td><a href="" class="btn btn--sm">Add to Cart</a></td>
+                </tr>
 
-            <div class="divider">
-                <i class="fi fi-rs-fingerprint"></i>
-            </div>
-
-            <div class="cart__group grid">
-                <div>
-                    <div class="cart__shipping">
-                        <h3 class="section__title">Calculate Shipping</h3>
-
-                        <form action="" class="form grid">
-                            <input type="text" placeholder="State / Country" 
-                            class="form__input">
-
-                            <div class="form__group grid">
-                                <input type="text" placeholder="City" 
-                                class="form__input">
-
-                                <input type="text" placeholder="postale / ZIP" 
-                                class="form__input">
-                            </div>
-
-                            <div class="form__btn">
-                                <button class="btn flex btn--sm">
-                                    <i class="fi-rs-shuffle"></i> Update
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="cart__coupon">
-                        <h3 class="section__title">Apply Coupon</h3>
-
-                        <form action="" class="coupon__form form grid">
-                            <div class="form__group grid">
-                                <input type="text" 
-                                class="form__input" 
-                                placeholder="Enter Your Coupon">
-
-                                <div class="form__btn">
-                                    <button class="btn flex btn--sm">
-                                        <i class="fi-rs-label"></i> Apply
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="cart__total">
-                    <h3 class="section__title">Cart Totals</h3>
-
-                    <table class="cart__total-table">
-                        <tr>
-                            <td><span class="cart__total-title">Cart Subtotal</span></td>
-                            <td><span class="cart__total-price">$240.00</span></td>
-                        </tr>
-
-                        <tr>
-                            <td><span class="cart__total-title">Shipping</span></td>
-                            <td><span class="cart__total-price"></span>$10.00</span></td>
-                        </tr>
-
-                        <tr>
-                            <td><span class="cart__total-title">Total</span></td>
-                            <td><span class="cart__total-price">$250.00</span></td>
-                        </tr>
-                    </table>
-
-                    <a href="checkout.html" class="btn flex btn--md">
-                        <i class="fi fi-rs-box-alt"></i> Proceed To Checkout
-                    </a>
-                </div>
-            </div>
+                <tr>
+                    <th>Remove</th>
+                    <td><i class="fi fi-rs-trash table__trash"></i></td>
+                    <td><i class="fi fi-rs-trash table__trash"></i></td>
+                    <td><i class="fi fi-rs-trash table__trash"></i></td>
+                </tr>
+            </table>
         </section>
     
         <!--============= NEWSLETTER ===========-->
