--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </li>
                     
                     <li class="nav__item">
-                        <a href="Login.html" class="nav__link">Login</a>
+                        <a href="login-register.html" class="nav__link">Login</a>
                     </li>
                     
                 </ul>
@@ -201,7 +201,7 @@
 
             <div class="tab__items">
                 <div class="tab__item active-tab" content id="featured">
-                    <div class="product__container grid">
+                    <div class="products__container grid">
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
@@ -629,7 +629,7 @@
                 </div>
 
                 <div class="tab__item" content id="popular">
-                    <div class="product__container grid">
+                    <div class="products__container grid">
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
@@ -1057,7 +1057,7 @@
                 </div>
 
                 <div class="tab__item" content id="new-added">
-                    <div class="product__container grid">
+                    <div class="products__container grid">
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
