--- a/accounts.html
+++ b/accounts.html
@@ -138,7 +138,7 @@
                     </p>
 
                     <p class="account__tab">
-                        <i class="fi fi-rs-exit"></i> Exit
+                        <i class="fi fi-rs-exit"></i><a href="index.html"> Exit</a>
                     </p>
                 </div>
 
