--- a/details.html
+++ b/details.html
@@ -45,13 +45,23 @@
 
         <nav class="nav container">
             <a href="index.html" class="nav__logo">
-                <img src="Assets/Img/Icons/daycare.png" alt="" class="nav__logo-img" />
+                <img src="Assets/Img/Icons/shopping-online.jpg" alt="" class="nav__logo-img" />
             </a>
             
             <div class="nav__menu" id="nav-menu">
+                <div class="nav__menu-top">
+                    <a href="index.html" class="nav__menu-logo">
+                        <img src="Assets/Img/Icons/shopping-online.jpg" alt="">
+                    </a>
+
+                    <div class="nav__close" id="nav-close">
+                        <i class="fi fi-rs-cross-small"></i>
+                    </div>
+                </div>
+
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="index.html" class="nav__link">Home</a>
+                        <a href="index.html" class="nav__link active-link">Home</a>
                     </li>
 
                     <li class="nav__item">
@@ -94,10 +104,14 @@
                 </a>
 
                 <a href="cart.html" class="header__action-btn">
-                    <!--<img src="Assets/Img/" alt="">-->
+                    <img src="Assets/Img/" alt="">
                     <i class='bx bx-shopping-bag' ></i>
                     <span class="count">3</span>
                 </a>
+
+                <div class="header__action-btn nav__toggle" id="nav-toggle">
+                    <img src="Assets/Img/Icons/indent_left_icon_155245.png" alt="">
+                </div>
             </div>
         </nav>
     </header>
@@ -119,17 +133,17 @@
         <section class="details section--lg">
             <div class="details__container container grid">
                 <div class="details__group">
-                    <img src="Assets/Img/images/photo-1523293182086-7651a899d37f.avif" 
+                    <img src="Assets/Img/images/imgs/il_fullxfull.5292819096_c8gz.jpg" 
                         alt="" 
                         class="details__img">
                     
                     <div class="details__small-images grid">
-                        <img src="Assets/Img/images/images (1).jpeg" 
+                        <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" 
                             alt="" 
                             class="details__small-img"
                         >
 
-                        <img src="Assets/Img/images/images (2).jpeg" 
+                        <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" 
                             alt="" 
                             class="details__small-img"
                         >
