--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
             <div class="categories__container swiper">
                 <div class="swiper-wrapper">
                     <a href="shop.html" class="category__item swiper-slide">
-                        <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                        <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                         class="category__img">
 
                         <h3 class="category__title">T-Shirt</h3>
                     </a>
 
                     <a href="shop.html" class="category__item swiper-slide">
-                        <img src="Assets/Img/images/images (2).jpeg" alt="" 
+                        <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                         class="category__img">
 
                         <h3 class="category__title">Bags</h3>
@@ -219,10 +219,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -272,10 +272,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -325,10 +325,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -378,10 +378,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -431,10 +431,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -484,10 +484,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -537,10 +537,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -590,10 +590,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/images (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/images (4).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -639,6 +639,8 @@
                                 </a>
                             </div>
                         </div>
+
+                        
                     </div>
                 </div>
 
@@ -647,10 +649,10 @@
                         <div class="product__item">
                             <div class="product__banner">
                                 <a href="details.html" class="product__images">
-                                    <img src="Assets/Img/images/téléchargement (1).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/1419AFR1-t-shirt-cher-pere-noel-mon-fils-la-fait-personnalise.webp" alt="" 
                                     class="product__img default">
 
-                                    <img src="Assets/Img/images/téléchargement (2).jpeg" alt="" 
+                                    <img src="Assets/Img/images/imgs/il_fullxfull.3356562636_okhv.avif" alt="" 
                                     class="product__img hover">
                                 </a>
 
@@ -2325,7 +2327,7 @@
     <section class="newsletter section home__newsletter">
         <div class="newsletter__container container grid">
             <h3 class="newsletter__title flex">
-                <img src="Assets/Img/images/images (1).jpeg" 
+                <img src="Assets/Img/Icons/email-envelope-letter-send-inbox-newsletter-png-email-icon-transparent-background-11562853327aagu7825m3.png" 
                     alt="" 
                     class="newsletter__icon">
                 Sign Up to Newsletter
@@ -2349,7 +2351,7 @@
         <div class="footer__container grid">
             <div class="footer__content">
                 <a href="index.html" class="footer__logo">
-                    <img src="Assets/Img/Icons/daycare.png" alt="" class="footer__logo-img">
+                    <img src="Assets/Img/Icons/shopping-online.jpg" alt="" class="footer__logo-img">
                 </a>
     
                 <h4 class="footer__subtitle">Contact</h4>
@@ -2420,7 +2422,7 @@
             <div class="footer__content">
                 <h3 class="footer__title">Secured Payment Gateways</h3>
 
-                <img src="Assets/Img/images/images (4).jpeg" 
+                <img src="Assets/Img/Icons/payments.png" 
                     alt="" 
                     class="payment__img">
             </div>
