--- a/shop.html
+++ b/shop.html
@@ -44,17 +44,27 @@
 
         <nav class="nav container">
             <a href="index.html" class="nav__logo">
-                <img src="Assets/Img/Icons/daycare.png" alt="" class="nav__logo-img" />
+                <img src="Assets/Img/Icons/shopping-online.jpg" alt="" class="nav__logo-img" />
             </a>
             
             <div class="nav__menu" id="nav-menu">
+                <div class="nav__menu-top">
+                    <a href="index.html" class="nav__menu-logo">
+                        <img src="Assets/Img/Icons/shopping-online.jpg" alt="">
+                    </a>
+
+                    <div class="nav__close" id="nav-close">
+                        <i class="fi fi-rs-cross-small"></i>
+                    </div>
+                </div>
+
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="index.html" class="nav__link">Home</a>
+                        <a href="index.html" class="nav__link active-link">Home</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="shop.html" class="nav__link active-link">Shop</a>
+                        <a href="shop.html" class="nav__link">Shop</a>
                     </li>
                     
                     <li class="nav__item">
@@ -97,6 +107,10 @@
                     <i class='bx bx-shopping-bag' ></i>
                     <span class="count">3</span>
                 </a>
+
+                <div class="header__action-btn nav__toggle" id="nav-toggle">
+                    <img src="Assets/Img/Icons/indent_left_icon_155245.png" alt="">
+                </div>
             </div>
         </nav>
     </header>
